--- a/ui/artone1.html
+++ b/ui/artone1.html
@@ -1,2 +1,33 @@
+
 <html>
+  <head>
+      <title>
+          article one
+      </title>
+  </head>  
+    <body>
+        <div>
+            <a href="/">home</a>
+            </div>
+            <hr/>
+            <h3>
+                atricle one goes here
+            </h3>
+            <div>
+                august 10
+            </div>
+            <div>
+            <p>
+                the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.
+            </p>
+             <p>
+                the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.
+            </p>
+             <p>
+                the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.
+            </p>
+            </div>
+        
+    </body>
+    
 </html>
