--- a/ui/artone1.html
+++ b/ui/artone1.html
@@ -4,6 +4,7 @@
       <title>
           article one
       </title>
+      <meta name="vi export" content="width-device-width, initial-scale=1"/>
   </head>  
     <body>
         <div>
