[imad-console] Updates ui/artone1.html

--- a/ui/artone1.html
+++ b/ui/artone1.html
@@ -1,10 +1,10 @@
 
-<html>
+    <html>
   <head>
       <title>
           article one
       </title>
-      <meta name="vi export" content="width-device-width, initial-scale=1"/>
+      <meta name="viewport" content="width-device-width, initial-scale=1"/>
   </head>  
     <body>
         <div>
