--- a/ui/arttwo.html
+++ b/ui/arttwo.html
@@ -3,7 +3,7 @@
       <title>
           article two
       </title>
-      <meta name="vi export" content="width-device-width, initial-scale=1"/>
+      <meta name="viewport" content="width-device-width, initial-scale=1"/>
   </head>  
     <body>
         <div>
