--- a/ui/artone1.html
+++ b/ui/artone1.html
@@ -5,8 +5,17 @@
           article one
       </title>
       <meta name="viewport" content="width-device-width, initial-scale=1"/>
+      <style>
+          .container {
+              max-width:800px;
+              margin:0 auto;
+              color:grey;
+              font-family:sans-serif;
+          }
+      </style>
   </head>  
     <body>
+  <div class="container">
         <div>
             <a href="/">home</a>
             </div>
@@ -28,7 +37,7 @@
                 the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.
             </p>
             </div>
-        
+  </div>      
     </body>
     
 </html>
