--- a/ui/arttwo.html
+++ b/ui/arttwo.html
@@ -4,8 +4,10 @@
           article two
       </title>
       <meta name="viewport" content="width-device-width, initial-scale=1"/>
+       <link href="/ui/style.css" rel="stylesheet" />
   </head>  
     <body>
+    <div class="container">
         <div>
             <a href="/">home</a>
             </div>
@@ -27,7 +29,7 @@
                 the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.the whole content goes here.
             </p>
             </div>
-        
+    </div>    
     </body>
     
 </html>
