[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         
         <h3>Personal</h3>
         <div>
-            hi!!!my name is jhansi
+            hi!!!My name is Jhansi
         </div>
         <hr/>
         <h3>Professional</h3>
