--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,13 @@
         </div>
         <hr/>
         <div class="footer">
-         This button <button id = "counter">Click me!</button>has been clicked <span id="count"> 0 </span>times.    
+         This button <button id = "counter">Click here!</button>has been clicked <span id="count"> 0 </span>times.  
+         <hr/>
+         <input type="text" id="name" placeholder="name"> </input>
+         <input type="submit" value="Submit" id="submit_btn" > </input>
+         <ul id="namelist">
+             
+         </ul>
         </div>
     </div>  
         <script type="text/javascript" src="/ui/main.js">
