--- a/ui/index.html
+++ b/ui/index.html
@@ -20,14 +20,12 @@
             
         </div>
         <hr/>
-        <div class="footer">
-         This button <button id = "counter">Click here!</button>has been clicked <span id="count"> 0 </span>times.  
-         <hr/>
-         <input type="text" id="name" placeholder="name"> </input>
-         <input type="submit" value="Submit" id="submit_btn" > </input>
-         <ul id="namelist">
-             
-         </ul>
+        <h3>login to unlock awesome features</h3>
+        <div></div>
+         <input type="text" id="username" placeholder="username"/>
+         <input type="pasword" id="password" />
+         <input type="submit" id="submit_btn"  /> 
+        <div class="footer">    
         </div>
     </div>  
         <script type="text/javascript" src="/ui/main.js">
